<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_blog"
        android:icon="@drawable/ic_blog_24dp"
        android:orderInCategory="1"
        android:title="@string/blog"
        app:showAsAction="never" />
 <item
        android:id="@+id/menu_cases"
        android:icon="@drawable/ic_info"
        android:orderInCategory="2"
        android:title="@string/cases"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="3"
        android:title="@string/about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_sync"
        android:orderInCategory="5"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="6"
        android:title="@string/share_app"
        app:showAsAction="never" />

</menu>