<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_item_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:background="@color/colorPrimaryDark"
    android:clipToPadding="true"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/more_item_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/more_option"
            android:textColor="@color/colorGold"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/more_item_tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_selector"
            android:fontFamily="sans-serif-condensed"
            android:onClick="onMoreOptionsClick"
            android:padding="10dp"
            android:text="@string/about_us"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/more_item_tv_title" />

        <TextView
            android:id="@+id/more_item_tv_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_selector"
            android:fontFamily="sans-serif-condensed"
            android:onClick="onMoreOptionsClick"
            android:padding="10dp"
            android:text="@string/contact_us"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/more_item_tv_about" />


        <TextView
            android:id="@+id/more_item_tv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_selector"
            android:onClick="onMoreOptionsClick"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/more_item_tv_contact_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorGold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/more_item_tv_settings" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>